--- a/views/newCourseInfo.html
+++ b/views/newCourseInfo.html
@@ -161,7 +161,7 @@
                         </div>
 
                 </table><br>
-                <button class="btn btn-default">Submit Scorecard Template</button>
+                <button class="userInfoBtn btn btn-default">Submit Scorecard Template</button>
             </form>
 
 
