--- a/views/myCourses.html
+++ b/views/myCourses.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
         <script src="/static/javascript/courselist.js"></script>
         <link rel="stylesheet" type="text/css" href="/static/css/index.css">
+        <link href='https://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css'>
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
