--- a/views/course.html
+++ b/views/course.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">        
         <link rel="stylesheet" type="text/css" href="/static/css/index.css">
         <link rel="stylesheet" type="text/css" href="/static/css/course.css">
+        <link href='https://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css'>
 
 
     </head>
