--- a/views/fullScoresList.html
+++ b/views/fullScoresList.html
@@ -11,6 +11,8 @@
         <link rel="stylesheet" type="text/css" href="/static/css/index.css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css'>
+        
     </head>
     <body>
     <div class='container'>
