--- a/views/login.html
+++ b/views/login.html
@@ -11,10 +11,13 @@
         <script src="/static/javascript/login.js"></script>
         <link rel="stylesheet" type="text/css" href="/static/css/index.css">
         <link rel="stylesheet" type="text/css" href="/static/css/login.css">
+        <link href='https://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css'>
+        
         <link href="css/YTPlayer.css" media="all" rel="stylesheet" type="text/css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
         <script src="inc/jquery.mb.YTPlayer.js"></script>
+
     </head>
     <body>
     <div class='container'> 
