--- a/views/newScore.html
+++ b/views/newScore.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
         <script src="/static/javascript/newscore.js"></script>
         <link rel="stylesheet" type="text/css" href="/static/css/index.css">
+        <link href='https://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css'>
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
@@ -52,7 +53,12 @@
           </nav>
           
 
-          <h3 id='courseName'>Course: </h3>
+          <!-- <h3 id='courseName'>Course: </h3> -->
+
+            <div class="input-group input-group">
+                <span class="featureHeader input-group-addon">Course: </span>
+                <div class='form-control' id='courseName'></div>           
+            </div><br>
 
           <form method='POST' action='/:course/newscore' id='new-score'>
 
@@ -63,12 +69,12 @@
 
             <div class="input-group input-group">
                 <span class="featureHeader input-group-addon" id="sizing-addon1">Playing Partners:</span>
-                <input placeholder="Please enter names (optional)" class="form-control" type="text" name='playingPartners' required='false'>                
+                <input placeholder="Please Enter Names (Optional)" class="form-control" type="text" name='playingPartners' required='false'>                
             </div><br>
 
             <div class="input-group input-group">
                 <span class="featureHeader input-group-addon" id="sizing-addon1">Notes on the Round:</span>
-                <input placeholder="Weather Conditions? Driving Performance? Green Conditions?  (Optional)" class="form-control" type="text" name='comments' required='false'>                
+                <input placeholder="Weather Conditions. Driving Performance. Green Conditions.  (Optional)" class="form-control" type="text" name='comments' required='false'>                
             </div><br>
 
 
