--- a/public/css/index.css
+++ b/public/css/index.css
@@ -87,6 +87,10 @@ body {
 
 /***************  USER INFO BOXES  **********************/
 
+.info {					
+	color: gray;
+}
+
 .userInfo {
 	margin-top: 15%;
 	text-align: center;
