--- a/views/scorePage.html
+++ b/views/scorePage.html
@@ -36,7 +36,7 @@
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                 <ul class="nav navbar-nav navbar-right">
-                  <li><a href="/profile class='navbarHover'">PROFILE</a></li>
+                  <li><a href="/profile" class='navbarHover'>PROFILE</a></li>
                   <li class="dropdown navbarHover">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">OPTIONS<span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -51,14 +51,14 @@
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
           </nav>
-          
-        <h3 id='courseName'>Course Name: </h3>
+         
+    <div class='info'>          
+        <h3 id='courseName'>Course: </h3><hr>
         <h5 id='gameDate'>Date of Round: </h5>
         <h5 id='playingPartners'>Playing Partners: </h5>
         <h5 id='comments'>Commentary on the Round: </h5>
-        <br>    
-
-
+        <br> 
+    </div>   
 
                 <div class="panel panel-default">
                         <table class="table">
