--- a/views/course.html
+++ b/views/course.html
@@ -58,10 +58,13 @@
             </div><!-- /.container-fluid -->
           </nav>
             
+         <div class='info'> 
+            <h3 id='courseName'>Course: </h3><hr>
+            <h5 id='noOfRounds'>No. of Rounds: </h5>
+            <h5 id='lastGameDate'>Date of Last Round: </h5><br>   
+        </div>
 
-        <h3 id='courseName'>Course Name: </h3>
-        <h5 id='noOfRounds'>No. of Rounds: </h5>
-        <h5 id='lastGameDate'>Date of Last Round: </h5><br>       
+
                 <!-- RECENT SCORES TABLE -->
                 <div class="panel panel-default">
                     <div class="featureHeader panel-heading">Performance Summary:</div>
