update to login css

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,11 +1,7 @@
 
 
-
-
-
-
-
-
-
-/*  Div alignment  */
+#loginPic {
+	background-image: url('../images/login.png');
+	background-size: cover;
+}
 
