--- a/views/login.html
+++ b/views/login.html
@@ -12,24 +12,20 @@
         <link rel="stylesheet" type="text/css" href="/static/css/index.css">
         <link rel="stylesheet" type="text/css" href="/static/css/login.css">
         <link href='https://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css'>
-        
-        <link href="css/YTPlayer.css" media="all" rel="stylesheet" type="text/css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-        <script src="inc/jquery.mb.YTPlayer.js"></script>
+
 
     </head>
-    <body>
+    <body id='loginPic'>
     <div class='container'> 
-
-        <div class='player' id="bgndVideo" data-property="{videoURL:'https://www.youtube.com/watch?v=kgeYE-ogpb0',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}">
 
             <div class='container userInfo'>
                 <div class='row'> 
                     <div class='col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-3'> 
                         <form method='POST' action='/login'>
-                            <input placeholder="E-Mail Address" class="form-control" type="text" name='email' required='true'><br>
-                            <input placeholder="Password" class="form-control" type="password" name='password' required='true'><br><br>
+                            <input placeholder="E-Mail Address" class="form-control" type="text" name='email' required='true' value='demo@demo.com'><br>
+                            <input placeholder="Password" class="form-control" type="password" name='password' required='true' value='123'><br><br>
                             <button class="userInfoBtn btn btn-default col-md-12">Login</button>
                         </form>
                         
